V2- Alteran arquivo .html - CPF e Email
Versão 2

--- a/Menu.html
+++ b/Menu.html
@@ -1,8 +1,8 @@
-				Controle de Vendas de Pizzarias
+				Controle de Vendas de Pizzas
 		
 Pizzaria: Pizzaria Alegre
 
-Versao: 001
+Versao: 002
 
 Operador:
 
@@ -11,3 +11,7 @@ Operador:
 Telefone:
 
 Cliente:
+
+CPF:
+
+Email:
